updated R2 indicator to be correct and run much faster using Fast R2 sorting from Diaz and Coello. HV indicator cedit is obsolete for now. Was running too slow